--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/13eUtMeCT_P7uT0zJWWkdfdmsBXfLw_RG/view?usp=sharing">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/a3Z7zEc7AXQ">
     <title>youtube-downloader</title>
 </head>
 <body>
     <script type="text/javascript">
-        window.location.href = "https://drive.google.com/file/d/13eUtMeCT_P7uT0zJWWkdfdmsBXfLw_RG/view?usp=sharing"
+        window.location.href = "https://youtu.be/a3Z7zEc7AXQ"
     </script>
-    If you are not redirected automatically, follow this <a href="https://drive.google.com/file/d/13eUtMeCT_P7uT0zJWWkdfdmsBXfLw_RG/view?usp=sharing">link to explanation</a>.
+    If you are not redirected automatically, follow this <a href="https://youtu.be/a3Z7zEc7AXQ">link to explanation</a>.
 </body>
 </html>
