--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script type="text/javascript">
         window.location.href = "https://youtu.be/a3Z7zEc7AXQ"
     </script>
-    If you are not redirected automatically, follow this <a href="https://youtu.be/a3Z7zEc7AXQ">link to explanation</a>.
+    If you are not redirected automatically, follow this <a href="https://cutt.ly/eDFRIhd">link to explanation</a>.
 </body>
 </html>
